# NP1

./: CMakeLists.txt  GNUmakefile  History  NP1.cc  README.md  job_launcher.sh  plotAllHisto.C  plotHisto.C  plotNTuple.C  template_1.mac
JOBS/: template_1.mac
JOBS/Job1/: .cproject  .project  create_macros.sh  job1.sh
JOBS/Job4/: job4.sh
JOBS/Job5/: create_macros.sh  job1.sh
Job1/: create_macros.sh  job1.sh
Job4/: create_macros.sh
analysis/: plot_01.C  plot_02.C  plot_03.C  plot_04.C  plot_05.C  plot_06.C
analysis/data/.svn/: all-wcprops  entries
analysis/data/.svn/text-base/: plot_05.png.svn-base
beam/: 40keV.mac  50keV.mac  Co-60.mac  GammaAccelerator6MV.mac  I-131_1.mac  I-131_2.mac  I-131_gamma_1.mac  I-131_gamma_2.mac  RX100kVp.mac  RX180kVp.mac  RX40kVp.mac  circular_plane.mac  proton_100MeV.mac  proton_100keV.mac  proton_10MeV.mac  proton_1MeV.mac  spherical_surface.mac  spherical_volume.mac  square_plane.mac
include/: NP1ActionInitialization.hh  NP1Analysis.hh  NP1ChangeCrossSection.hh  NP1Control.hh  NP1ControlMessenger.hh  NP1CrossSectionBasedBiasing.hh  NP1DetectorConstruction.hh  NP1DetectorMessenger.hh  NP1EventAction.hh  NP1Materials.hh  NP1PhantomVoxelParameterisation.hh  NP1PhysicsList.hh  NP1PhysicsListFactory.hh  NP1PhysicsListMessenger.hh  NP1PrimaryGeneratorAction.hh  NP1PrimaryGeneratorActionMessenger.hh  NP1RunAction.hh  NP1SVParameterisation.hh  NP1SteppingAction.hh  NP1TrackingAction.hh
log/: README
mac/: init.mac  multiple_nanoparticles.mac  single_nanoparticle.mac  vis1.mac
src/: NP1ActionInitialization.cc  NP1ChangeCrossSection.cc  NP1Control.cc  NP1ControlMessenger.cc  NP1CrossSectionBasedBiasing.cc  NP1DetectorConstruction.cc  NP1DetectorMessenger.cc  NP1EventAction.cc  NP1Materials.cc  NP1PhantomVoxelParameterisation.cc  NP1PhysicsList.cc  NP1PhysicsListFactory.cc  NP1PhysicsListMessenger.cc  NP1PrimaryGeneratorAction.cc  NP1PrimaryGeneratorActionMessenger.cc  NP1RunAction.cc  NP1SVParameterisation.cc  NP1SteppingAction.cc  NP1TrackingAction.cc
